# NewLauncher

./: Cargo.toml
assets/remote/: config.json
src/: app.rs  main.rs
src/config/: mod.rs
src/integrations/: api.rs  http.rs  mod.rs  steam.rs
src/ui/: backgrounds.rs  mod.rs  online_status.rs  update_info.rs  window.rs
src/ui/handlers/: home_buttons.rs  mod.rs  settings.rs
ui/: app.slint  globals.slint
ui/components/: backgrounds.slint  button.slint  content_area.slint  infobar.slint  lowbar.slint  path.slint  settings_items.slint  switch.slint  titlebar.slint
ui/pages/: main_page.slint  search_page.slint  settings_page.slint
