[package]
name = "four_four_two_launcher"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[dependencies]
slint = { version = "1.16", features = ["renderer-skia"] }
i-slint-backend-winit = "1.16"
rfd = "0.17.2"
log = "0.4.27"
is_elevated = "0.1.2"
discord-rich-presence = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
flexi_logger = "0.31.8"
serde_json = "1.0.149"
open = "5.3.5"
sys-locale = "0.3.2"

[build-dependencies]
slint-build = "1.16"

[profile.release]
lto = true
strip = true
opt-level = 3
